# -NG_2024_Oleksii_Tkachenko

./: .gitignore
Lesson_1/Task_1/: CMakeLists.txt  main.cpp
Lesson_1/Task_2/: CMakeLists.txt  main.cpp
Lesson_1/Task_3/: main.cpp
Lesson_1/Task_4/: main.cpp
Lesson_1/Task_5/: CMakeLists.txt  main.cpp
Lesson_1/Task_6/: CMakeLists.txt  main.cpp
Lesson_1/Task_7/: CMakeLists.txt  main.cpp
Lesson_2/Task_1/: CMakeLists.txt  main.cpp
Lesson_2/Task_2/: main.cpp
Lesson_2/Task_3/: CMakeLists.txt  main.cpp
Lesson_2/Task_4/: CMakeLists.txt  main.cpp
Lesson_5/Task_1/: CMakeLists.txt  car.cpp  car.h  carcard.cpp  carcard.h  carcard.ui  filter.cpp  filter.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  test.h
